--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <img src="images/school.jpg" alt="">
                     <h3>学校について</h3>
                     <p>
-                        LifeIsTech!大学にかよってます<br>
+                        LifeIsTech!大学にかよってます!<br>
                         白金高輪からやく３０分です。日吉駅にあります。
                     </p>
                     <a href="https://life-is-tech.com/school/">詳しくはこちら</a>
