--- a/index.html
+++ b/index.html
@@ -41,6 +41,12 @@
             </div>
         </div>
     </section>
+
+    <section class="favorite">
+        <div class="container">
+            
+        </div>
+    </section>
    
 </body>
 </html>
