--- a/index.html
+++ b/index.html
@@ -44,7 +44,24 @@
 
     <section class="favorite">
         <div class="container">
-            
+            <h2 class="section-title">好きなこと</h2>
+            <div class="favorite-contents">
+                <div class="favorite-content">
+                    <img src="images/camera.png" alt="">
+                    <h3>カメラ</h3>
+                    <p>誕生日にカメラをもらったことをきっかけにしてカメラにハマっています！たくさん写真をこれからも撮り続けたいです。</p>
+                </div>
+                <div class="favorite-content">
+                    <img src="images/dog.png" alt="">
+                    <h3>犬</h3>
+                    <p>犬を２年前から飼い始めました。すごく人懐こい犬でとても大好きです。</p>
+                </div>
+                <div class="favorite-content">
+                    <img src="images/youtube.png" alt="">
+                    <h3>Youtube</h3>
+                    <p>最近は友達にYoutubeを勧められました。見過ぎに気をつけます。</p>
+                </div>
+            </div>
         </div>
     </section>
    
